--- a/src/app/modules/default/pages/login/login.component.html
+++ b/src/app/modules/default/pages/login/login.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="content-wrapper">
   <div class="lang">
     <i nz-icon nzTheme="outline" nzType="font-size"></i>
   </div>
   <div class="content-layout">
     <div class="head">
-      <img class="logo" alt="" src="/assets/imgs/logo-color.svg" />
+      <img class="logo" alt="" src="/assets/images/logo-color.svg" />
       <span class="title">LT Admin</span>
     </div>
     <div class="desc">Ant Design It is the most influential Web design specification in West Lake District</div>
