--- a/src/app/modules/default/pages/login/login.component.less
+++ b/src/app/modules/default/pages/login/login.component.less
@@ -2,11 +2,11 @@
 
 .themeMixin({
   :host {
-    .container {
+    .content-wrapper {
       display: flex;
       flex-direction: column;
       min-height: 100%;
-      background: @background-color-base url('/assets/imgs/login-bg.svg') no-repeat center 110px;
+      background: @background-color-base url('/assets/images/login-bg.svg') no-repeat center 110px;
       background-size: 100%;
 
       .lang {
