--- a/src/app/modules/default/pages/login/login-form/login-form.component.html
+++ b/src/app/modules/default/pages/login/login-form/login-form.component.html
@@ -4,15 +4,15 @@
       <nz-tab nzTitle="Account password login">
         <nz-form-item>
           <nz-form-control nzErrorTip="Account name: admin">
-            <nz-input-group nzPrefixIcon="user" [nzSize]="'large'">
-              <input type="text" formControlName="userName" nz-input placeholder="Username" [placeholder]="'Account name: admin'" />
+            <nz-input-group nzPrefixIcon="user" nzSize="large">
+              <input type="text" formControlName="username" nz-input placeholder="Username" placeholder="Account username" />
             </nz-input-group>
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
           <nz-form-control nzErrorTip="Password: 123456">
-            <nz-input-group nzPrefixIcon="lock" [nzSize]="'large'">
-              <input type="password" autocomplete="on" formControlName="password" nz-input placeholder="password" [placeholder]="'Password: 123456'" />
+            <nz-input-group nzPrefixIcon="lock" nzSize="large">
+              <input type="password" autocomplete="on" formControlName="password" nz-input placeholder="password" placeholder="Account password" />
             </nz-input-group>
           </nz-form-control>
         </nz-form-item>
@@ -21,24 +21,24 @@
       <nz-tab nzTitle="Mobile phone number login">
         <nz-form-item>
           <nz-form-control nzErrorTip="please enter user name!">
-            <nz-input-group nzPrefixIcon="mobile" [nzSize]="'large'">
-              <input type="text" autocomplete="on" formControlName="userName" nz-input placeholder="Phone number" />
+            <nz-input-group nzPrefixIcon="mobile" nzSize="large">
+              <input type="text" autocomplete="on" formControlName="username" nz-input placeholder="Phone number" />
             </nz-input-group>
           </nz-form-control>
         </nz-form-item>
         <nz-form-item nz-row nzJustify="space-between">
           <nz-form-control class="flex-1" nz-col nzErrorTip="please enter verification code!" style="max-width: 65%" [nzSm]="16" [nzXs]="15">
-            <nz-input-group nzPrefixIcon="mail" [nzSize]="'large'">
+            <nz-input-group nzPrefixIcon="mail" nzSize="large">
               <input type="password" formControlName="password" nz-input placeholder="password" />
             </nz-input-group>
           </nz-form-control>
-          <button class="p-0" nz-button nz-col nzType="default" [nzSize]="'large'" [nzSm]="7" [nzXs]="7">Get verification code</button>
+          <button class="p-0" nz-button nz-col nzSize="large" nzType="default" [nzSm]="7" [nzXs]="7">Get verification code</button>
         </nz-form-item>
       </nz-tab>
     </nz-tabset>
     <div class="login-form-margin" nz-row>
       <div nz-col [nzSpan]="12">
-        <label formControlName="remember" nz-checkbox>
+        <label nz-checkbox>
           <span>auto login</span>
         </label>
       </div>
