--- a/src/app/shared/biz-components/icon-sel/icon-sel.component.html
+++ b/src/app/shared/biz-components/icon-sel/icon-sel.component.html
@@ -31,7 +31,7 @@
     style="max-width: 300px"
     [nzPageSize]="pageObj.pageSize"
     [nzPageSizeOptions]="[20, 50]"
-    [nzSize]="'small'"
+    nzSize="small"
     [nzTotal]="iconsStrAllArray.length"
     [(nzPageIndex)]="pageObj.pageNum"
     (nzPageIndexChange)="getData($event)"
