--- a/src/app/shared/biz-components/layout-components/layout-head-right-menu/layout-head-right-menu.component.less
+++ b/src/app/shared/biz-components/layout-components/layout-head-right-menu/layout-head-right-menu.component.less
@@ -8,7 +8,7 @@
     padding: 0 12px;
     font-size: 16px;
     cursor: pointer;
-    transition: all .3s;
+    transition: all 0.3s;
 
     .avatar {
       width: 24px;
@@ -25,4 +25,11 @@
   .bst-header-icon:hover {
     background-color: rgb(0 0 0 / 2.5%);
   }
+}
+
+.setting-wrapper {
+  min-width: 250px;
+  max-width: 250px;
+  // border: 1px solid rgba(0, 0, 0, 0.06);
+  border-radius: 2px !important;
 }
